very slight changes to plotting file. made animation for 30°. deleted some unneccesary files.

--- a/Work/Testing.ipynb
+++ b/Work/Testing.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulation ended after 23.04 seconds with 1152 steps. 0 balls remain on the table.\n"
+      "Simulation ended after 109.88 seconds with 5494 steps. 0 balls remain on the table.\n"
      ]
     }
    ],
@@ -58,9 +58,9 @@
     "table_ydims = 200\n",
     "\n",
     "break_speed = 130\n",
-    "theta = 75\n",
+    "theta = 30\n",
     "dt = .02\n",
-    "sim_time_max = 100\n",
+    "sim_time_max = 1000\n",
     "plot_interval = .14\n",
     "\n",
     "table, starting_balls = billiard_objects.create_objects(ball_mass, ball_radius, hole_radius, table_xdims, table_ydims)\n",
@@ -70,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "plotting.save_all_plot_frames(table, positions_plot)"
+    "plotting.save_all_plot_frames(table, positions_plot, directory='animation/30° frames')"
    ]
   },
   {
